star rating and doller rating are made,some css field has been improved

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -26,6 +26,11 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     />
+    <!-- Font Awesome Icon Library -->
+    <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- Google Fonts -->
     <link
       rel="stylesheet"
@@ -85,6 +90,6 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"
     ></script>
-    -->
+    
   </body>
 </html>
