--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -27,9 +27,9 @@
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     />
     <!-- Font Awesome Icon Library -->
-    <link 
-    rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- Google Fonts -->
     <link
@@ -56,6 +56,7 @@
       src="https://kit.fontawesome.com/683b4b40e3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <title>React App</title>
   </head>
   <body>
@@ -90,6 +91,5 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"
     ></script>
-    
   </body>
 </html>
