trying to add map box

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -52,6 +52,10 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <!--Map Box-->
+    <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' /> -->
+
     <script
       src="https://kit.fontawesome.com/683b4b40e3.js"
       crossorigin="anonymous"
