--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -64,7 +64,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <title>React App</title>
+    <title>Delivary.com</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
